--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-infinite-scroll-view": "^0.4.5",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
