--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.2",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -21,9 +22,12 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-gif": "^1.0.3",
     "react-native-infinite-scroll-view": "^0.4.5",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-logs": "^5.0.1",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
