--- a/package.json
+++ b/package.json
@@ -27,12 +27,15 @@
     "react-native-infinite-scroll-view": "^0.4.5",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-logs": "^5.0.1",
+    "react-native-pager-view": "^6.2.0",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
+    "react-native-scrollable-tab-view": "^1.0.0",
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-toast-message": "^2.1.6"
+    "react-native-toast-message": "^2.1.6",
+    "react-native-video": "^6.0.0-alpha.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -44,6 +47,8 @@
     "@react-native/metro-config": "^0.72.9",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
+    "@types/react-native-scrollable-tab-view": "^0.10.3",
+    "@types/react-native-video": "^5.0.15",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
