--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-native-collapsible-header-views": "^1.1.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.12.1",
+    "react-native-image-placeholder": "^1.0.14",
     "react-native-infinite-scroll-view": "^0.4.5",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-logs": "^5.0.1",
+    "react-native-orientation-locker": "^1.5.0",
     "react-native-pager-view": "^6.2.0",
     "react-native-root-toast": "^3.4.1",
     "react-native-safe-area-context": "^4.7.1",
