--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "web": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject"
+
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.2",
@@ -38,7 +42,9 @@
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.1.6",
-    "react-native-video": "^6.0.0-alpha.7"
+    "react-native-video": "^6.0.0-alpha.7",
+    "react-native-web": "^0.19.8",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
