--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest"
-
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.2",
@@ -39,7 +38,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-toast-message": "^2.1.6",
-    "react-native-video": "^6.0.0-alpha.7"
+    "react-native-video": "^6.0.0-alpha.7",
+    "react-native-webview": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
